trying to fix overflow

--- a/src/main.scss
+++ b/src/main.scss
@@ -7,7 +7,7 @@
     font-family: 'roboto';
 }
 
-.body {
+html {
     overflow-x: hidden;
 }
 
